<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.App.Button.Frameless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <FrameLayout
        android:id="@+id/video_preview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:background="#CCCCCC">

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play_video"
            android:src="@drawable/ic_play_arrow_24"
            android:visibility="gone" />
    </FrameLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/like"
        style="@style/Widget.App.Button.Frameless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        android:contentDescription="@string/description_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_preview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.App.Button.Frameless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_share"
        app:icon="@drawable/share"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/Widget.App.Button.Frameless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_eye"
        app:icon="@drawable/eye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/like" />

</androidx.constraintlayout.widget.ConstraintLayout>